# sneachta

./: LICENSE.txt  README.md  requirements.txt  setup.cfg
src/sneachta/: __init__.py  core.py  exceptions.py
